[project]
name = "edsale1"
version = "0.1.0"
description = "edsale1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
edsale1 = "edsale1.main:run"
run_crew = "edsale1.main:run"
train = "edsale1.main:train"
replay = "edsale1.main:replay"
test = "edsale1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
